--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "wlgen"
 version = "0.1.0"
 edition = "2021"
-rust-version = "1.78"
+rust-version = "v1.78"
 
 [dependencies]
-clap = { version = "4.5.7", features = ["derive"] }
+clap = { version = "4.4.18", features = ["derive"] }
